# talyte-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
.scripts/: firstRun.sh
src/: client.cpp  protoTools.cpp  protoTools.hpp
